Prediction of Movie Collection using Reg Tree

--- a/Housing_Prices/Classification Models/Logit_Reg.ipynb
+++ b/Housing_Prices/Classification Models/Logit_Reg.ipynb
@@ -10,17 +10,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.10"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python388jvsc74a57bd08c0ca710616a0fb9475365dbe157376047a0359b13d6c4a1a84c0ecfc903a809",
-   "display_name": "Python 3.8.8 64-bit"
+   "name": "python3",
+   "display_name": "Python 3.8.10 64-bit"
   },
   "metadata": {
    "interpreter": {
     "hash": "8c0ca710616a0fb9475365dbe157376047a0359b13d6c4a1a84c0ecfc903a809"
    }
+  },
+  "interpreter": {
+   "hash": "5d97ad4eda96f4e0dcd5ae4f97368654619500468c6147550d2a1b2a1881f9a5"
   }
  },
  "nbformat": 4,
@@ -28,21 +31,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import precision_score, recall_score, roc_auc_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,17 +58,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "X_Train, X_test, Y_train, Y_test = train_test_split(data_X, data_Y, train_size= 0.8)\n",
-    "logit_model = LogisticRegression(max_iter=1000)"
+    "logit_model = LogisticRegression(max_iter=1000)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -74,23 +79,23 @@
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 26
     }
    ],
    "source": [
-    "logit_model.fit(X_Train, Y_train)"
+    "logit_model.fit(X_Train, Y_train)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[0 0 0 1 1 0 0 1 0 1 0 0 0 1 1 0 1 0 0 0 0 0 0 0 0 1 1 1 1 0 1 1 0 0 0 0 1\n 0 0 1 1 0 0 1 0 1 1 1 1 0 0 1 0 0 0 0 0 1 0 0 0 0 0 1 1 1 0 0 1 0 1 0 0 1\n 0 1 1 0 0 0 1 1 1 0 1 0 1 0 1 1 0 0 0 0 1 1 0 1 1 0 0 1]\n[1 0 0 0 1 0 0 0 0 1 0 0 1 1 1 0 0 0 1 0 0 1 0 0 0 1 0 0 0 0 1 1 0 0 1 0 1\n 0 0 1 1 1 1 1 1 0 0 0 0 0 1 1 0 0 0 0 1 0 0 1 1 1 0 1 1 1 1 1 1 1 1 0 0 1\n 1 1 1 1 0 0 0 1 1 0 1 0 1 1 1 0 0 1 0 0 1 1 0 1 1 0 0 0]\n"
+      "[0 0 0 1 1 0 0 0 0 0 1 0 0 1 0 1 0 0 1 0 1 1 1 0 1 0 0 0 1 0 1 0 0 0 1 1 0\n 0 0 0 0 1 1 0 1 1 0 1 0 1 1 0 0 1 0 0 0 1 1 0 0 1 1 0 0 0 0 1 0 0 1 0 0 0\n 1 1 0 1 0 0 1 0 1 1 0 0 0 0 0 1 0 0 0 1 1 1 1 1 1 0 1 0]\n[1 0 0 1 0 0 0 0 0 0 1 0 0 0 1 1 1 0 1 0 0 1 1 0 1 0 0 0 1 1 1 0 1 1 0 1 0\n 0 0 0 1 0 0 1 1 1 0 1 1 1 0 0 0 1 0 1 0 1 1 0 1 1 0 0 0 1 0 1 0 0 1 0 0 0\n 1 1 1 1 1 1 1 0 1 0 0 1 1 0 1 1 0 0 1 0 1 1 1 1 0 1 1 0]\n"
      ]
     }
    ],
@@ -103,14 +108,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[[0.7230615  0.2769385 ]\n [0.60265632 0.39734368]\n [0.80316116 0.19683884]\n [0.38903081 0.61096919]\n [0.37710165 0.62289835]\n [0.77268063 0.22731937]\n [0.77334025 0.22665975]\n [0.22382811 0.77617189]\n [0.50311853 0.49688147]\n [0.41269909 0.58730091]\n [0.81880616 0.18119384]\n [0.68058022 0.31941978]\n [0.68128233 0.31871767]\n [0.47736255 0.52263745]\n [0.26514731 0.73485269]\n [0.69111767 0.30888233]\n [0.44476636 0.55523364]\n [0.51294346 0.48705654]\n [0.61911486 0.38088514]\n [0.50848786 0.49151214]\n [0.71827936 0.28172064]\n [0.59777226 0.40222774]\n [0.57329814 0.42670186]\n [0.87707245 0.12292755]\n [0.64119062 0.35880938]\n [0.45379286 0.54620714]\n [0.38178291 0.61821709]\n [0.44011708 0.55988292]\n [0.24192159 0.75807841]\n [0.88674817 0.11325183]\n [0.32920604 0.67079396]\n [0.15183282 0.84816718]\n [0.6404801  0.3595199 ]\n [0.6930525  0.3069475 ]\n [0.5116444  0.4883556 ]\n [0.53567657 0.46432343]\n [0.42504616 0.57495384]\n [0.5805057  0.4194943 ]\n [0.58832045 0.41167955]\n [0.49913105 0.50086895]\n [0.19289425 0.80710575]\n [0.5240411  0.4759589 ]\n [0.76180728 0.23819272]\n [0.16378528 0.83621472]\n [0.6355145  0.3644855 ]\n [0.38672716 0.61327284]\n [0.15960193 0.84039807]\n [0.47410373 0.52589627]\n [0.45905639 0.54094361]\n [0.68469344 0.31530656]\n [0.71804176 0.28195824]\n [0.26440209 0.73559791]\n [0.61132972 0.38867028]\n [0.56710531 0.43289469]\n [0.51159644 0.48840356]\n [0.96547507 0.03452493]\n [0.75002543 0.24997457]\n [0.43405062 0.56594938]\n [0.53116524 0.46883476]\n [0.6498049  0.3501951 ]\n [0.62215916 0.37784084]\n [0.55485981 0.44514019]\n [0.70280197 0.29719803]\n [0.15499925 0.84500075]\n [0.42005478 0.57994522]\n [0.19054671 0.80945329]\n [0.6304023  0.3695977 ]\n [0.54095996 0.45904004]\n [0.42676768 0.57323232]\n [0.54405851 0.45594149]\n [0.44941487 0.55058513]\n [0.81238932 0.18761068]\n [0.6517385  0.3482615 ]\n [0.34460257 0.65539743]\n [0.71738495 0.28261505]\n [0.28803284 0.71196716]\n [0.4073411  0.5926589 ]\n [0.72879773 0.27120227]\n [0.84706191 0.15293809]\n [0.76718839 0.23281161]\n [0.28860935 0.71139065]\n [0.38823189 0.61176811]\n [0.3318905  0.6681095 ]\n [0.7988437  0.2011563 ]\n [0.30361837 0.69638163]\n [0.68051638 0.31948362]\n [0.29680775 0.70319225]\n [0.63955697 0.36044303]\n [0.48737387 0.51262613]\n [0.36113862 0.63886138]\n [0.80598527 0.19401473]\n [0.52852662 0.47147338]\n [0.57496876 0.42503124]\n [0.75745082 0.24254918]\n [0.3325155  0.6674845 ]\n [0.10830692 0.89169308]\n [0.64858736 0.35141264]\n [0.24065017 0.75934983]\n [0.42142374 0.57857626]\n [0.91060574 0.08939426]\n [0.86347834 0.13652166]\n [0.39501007 0.60498993]]\n"
+      "[[0.55340784 0.44659216]\n [0.75482978 0.24517022]\n [0.51590317 0.48409683]\n [0.38322758 0.61677242]\n [0.4860672  0.5139328 ]\n [0.76744802 0.23255198]\n [0.93298226 0.06701774]\n [0.56401821 0.43598179]\n [0.57230217 0.42769783]\n [0.85040084 0.14959916]\n [0.45353397 0.54646603]\n [0.64514944 0.35485056]\n [0.57248044 0.42751956]\n [0.44637394 0.55362606]\n [0.68956596 0.31043404]\n [0.40608207 0.59391793]\n [0.60437734 0.39562266]\n [0.76522722 0.23477278]\n [0.25290754 0.74709246]\n [0.65615987 0.34384013]\n [0.29096925 0.70903075]\n [0.44054948 0.55945052]\n [0.28732184 0.71267816]\n [0.69259444 0.30740556]\n [0.37707284 0.62292716]\n [0.50453452 0.49546548]\n [0.7679243  0.2320757 ]\n [0.58248649 0.41751351]\n [0.41845846 0.58154154]\n [0.76562712 0.23437288]\n [0.2855209  0.7144791 ]\n [0.53487133 0.46512867]\n [0.69164699 0.30835301]\n [0.54666461 0.45333539]\n [0.39749056 0.60250944]\n [0.25540983 0.74459017]\n [0.6816009  0.3183991 ]\n [0.69185759 0.30814241]\n [0.61733042 0.38266958]\n [0.58083748 0.41916252]\n [0.54747021 0.45252979]\n [0.27222225 0.72777775]\n [0.29074209 0.70925791]\n [0.5525885  0.4474115 ]\n [0.46348307 0.53651693]\n [0.41425529 0.58574471]\n [0.71037643 0.28962357]\n [0.24911202 0.75088798]\n [0.64689069 0.35310931]\n [0.46345889 0.53654111]\n [0.42686985 0.57313015]\n [0.84717566 0.15282434]\n [0.7749337  0.2250663 ]\n [0.30664425 0.69335575]\n [0.82861274 0.17138726]\n [0.68931044 0.31068956]\n [0.68426435 0.31573565]\n [0.48979125 0.51020875]\n [0.43653782 0.56346218]\n [0.52910765 0.47089235]\n [0.65957204 0.34042796]\n [0.31187143 0.68812857]\n [0.23465298 0.76534702]\n [0.89971436 0.10028564]\n [0.754951   0.245049  ]\n [0.55909112 0.44090888]\n [0.87482821 0.12517179]\n [0.40799895 0.59200105]\n [0.99515167 0.00484833]\n [0.66541031 0.33458969]\n [0.38268875 0.61731125]\n [0.53322391 0.46677609]\n [0.96326536 0.03673464]\n [0.83391257 0.16608743]\n [0.33940495 0.66059505]\n [0.05431984 0.94568016]\n [0.59317943 0.40682057]\n [0.36766646 0.63233354]\n [0.68948997 0.31051003]\n [0.78163649 0.21836351]\n [0.24428924 0.75571076]\n [0.80950072 0.19049928]\n [0.27998706 0.72001294]\n [0.33919817 0.66080183]\n [0.54211925 0.45788075]\n [0.50600298 0.49399702]\n [0.72226179 0.27773821]\n [0.72292849 0.27707151]\n [0.54984055 0.45015945]\n [0.23458346 0.76541654]\n [0.68563543 0.31436457]\n [0.67070719 0.32929281]\n [0.59171827 0.40828173]\n [0.28858141 0.71141859]\n [0.29114723 0.70885277]\n [0.38596111 0.61403889]\n [0.4443593  0.5556407 ]\n [0.48162408 0.51837592]\n [0.47582621 0.52417379]\n [0.5789793  0.4210207 ]\n [0.34265975 0.65734025]\n [0.85591305 0.14408695]]\n"
      ]
     }
    ],
@@ -121,29 +126,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array([False, False, False,  True,  True, False, False,  True,  True,\n",
-       "        True, False, False, False,  True,  True, False,  True,  True,\n",
-       "       False,  True, False,  True,  True, False, False,  True,  True,\n",
-       "        True,  True, False,  True,  True, False, False,  True,  True,\n",
-       "        True,  True,  True,  True,  True,  True, False,  True, False,\n",
-       "        True,  True,  True,  True, False, False,  True, False,  True,\n",
-       "        True, False, False,  True,  True, False, False,  True, False,\n",
-       "        True,  True,  True, False,  True,  True,  True,  True, False,\n",
-       "       False,  True, False,  True,  True, False, False, False,  True,\n",
-       "        True,  True, False,  True, False,  True, False,  True,  True,\n",
-       "       False,  True,  True, False,  True,  True, False,  True,  True,\n",
-       "       False, False,  True])"
+       "array([ True, False,  True,  True,  True, False, False,  True,  True,\n",
+       "       False,  True, False,  True,  True, False,  True, False, False,\n",
+       "        True, False,  True,  True,  True, False,  True,  True, False,\n",
+       "        True,  True, False,  True,  True, False,  True,  True,  True,\n",
+       "       False, False, False,  True,  True,  True,  True,  True,  True,\n",
+       "        True, False,  True, False,  True,  True, False, False,  True,\n",
+       "       False, False, False,  True,  True,  True, False,  True,  True,\n",
+       "       False, False,  True, False,  True, False, False,  True,  True,\n",
+       "       False, False,  True,  True,  True,  True, False, False,  True,\n",
+       "       False,  True,  True,  True,  True, False, False,  True,  True,\n",
+       "       False, False,  True,  True,  True,  True,  True,  True,  True,\n",
+       "        True,  True, False])"
       ]
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 7
     }
    ],
    "source": [
@@ -153,19 +158,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array([[39, 14],\n",
-       "       [20, 29]], dtype=int64)"
+       "array([[40, 11],\n",
+       "       [20, 31]], dtype=int64)"
       ]
      },
      "metadata": {},
-     "execution_count": 17
+     "execution_count": 8
     }
    ],
    "source": [
@@ -175,23 +180,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array([[28, 25],\n",
-       "       [13, 36]], dtype=int64)"
+       "array([[29, 22],\n",
+       "       [10, 41]], dtype=int64)"
       ]
      },
      "metadata": {},
-     "execution_count": 20
+     "execution_count": 9
     }
    ],
    "source": [
     "confusion_matrix(Y_test, Y_predicted_02)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0.6507936507936508\n0.803921568627451\n0.6862745098039216\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(precision_score(Y_test, Y_predicted_02))\n",
+    "print(recall_score(Y_test, Y_predicted_02))\n",
+    "print(roc_auc_score(Y_test, Y_predicted_02))\n"
    ]
   }
  ]
